test/compare/testdata/fixedbugs/issue331.go
// errorcheck

package main

func main() {
	_ = ([]int){} // ERROR `syntax error: cannot parenthesize type in composite literal`
}